--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                         <span>foodcheetah</span>
                     </a>
                 </div>
-                <nav>
+                <nav id="nav">
                     <div class="hamburger" id="hamburger"></div>
                     <div class="cross" id="cross"></div>
-                    <ul>
+                    <ul id="main-menu">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Services</a></li>
                         <li><a href="#">About</a></li>
